--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+  <link rel="stylesheet" href="./style.css">
   <script src="script.js" defer></script>
+  <script src="upload.js" defer></script>
 </head>
 <body>
-  
+  <div class="splash">
+    <h1>Odds</h1>
+    <input type="file" id="fileEmpire" multiple accept="json/*" style="display:none">
+    <label for="fileEmpire" class="button">Upload file</label>
+    <button id="launch" class="primary">Give me the odds</button>
+    <div id="odds"></div>
+  </div>
 </body>
 </html>
